# testtips

./: .gitignore  pyproject.toml
src/testtips/: __init__.py
tests/: test_tips.py  test_weather_fixture.py  test_weather_fixture.py:Zone.Identifier  test_weather_mock.py  test_weather_patch.py  test_weather_refactor.py
