[project]
name = "testtips"
version = "0.0.1"
authors = [{ name = "ArjanCodes" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "hypothesis>=6.135.26",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
]

[tool.pytest.ini_options]
# Faz o Python enxergar "src/" durante os testes
pythonpath = ["src"]
# Procura testes apenas na pasta tests
testpaths = ["tests"]
# Silencia a verbosidade padrão
addopts = "-q"

# (opcional, mas recomendado) pronto para empacotar se quiser
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
